# LaptopGPT

./: .env  .gitignore  README.md  app.py  chatbot.py  main.py  pyproject.toml  recomender_analysis.ipynb  recommendation.py  requirements.txt
data/: CleanedLaptopData.csv  dataClean.ipynb  numeric.csv
static/css/: style.css
static/js/: main.js
templates/: index.html
utils/: recommendation.py
